# rkm

./: CLAUDE.md  README.md  pyproject.toml
db/migrations/: V006__velocity_curves.sql  V007__track_offsets.sql  V008__race_performance.sql  V009__market_analysis.sql  V010__current_form.sql  V011__situation_detector.sql
docs/: rkm-v3.md
scripts/: compute_adjustments.py  compute_curves.py  compute_form.py  compute_market.py  compute_race_performance.py  compute_situations.py
src/rkm/: adjustments.py  curves.py  db.py  form.py  identity.py  market.py  performance.py  segments.py  situations.py  staking.py
tests/: test_form.py
