[project]
name = "rkm"
version = "0.1.0"
description = "Race Kinetics Model — segment-level speed figures and field dynamics"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rkm"]

[tool.ruff]
line-length = 100
